--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
 
 
 body {
-  background-image: url("/gradient_converted.webp");
+  background-image: url("/bg-nivos.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* 🔥 Hace que el fondo no se mueva */
@@ -51,7 +51,7 @@ a {
 .hero-bg {
   position: absolute;
   inset: 0;
-  background-image: url("/gradient_converted.webp");
+  /* background-image: url("/gradient_converted.webp"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
